# rust-todo-clean-app

./: .env  Cargo.toml
domain/: Cargo.toml
domain/src/: lib.rs  response.rs  todo.rs
driver/: Cargo.toml
driver/src/: lib.rs  schema.rs  todo.rs  utils.rs
gateway/: Cargo.toml
gateway/src/: todo.rs
rest/: Cargo.toml
rest/src/: lib.rs  routes.rs
src/: main.rs
usecase/: Cargo.toml
usecase/src/: lib.rs  todo.rs
usecase/src/port/: todo.rs
