[package]
name = "rust-todo-clean-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.27"
rest = { path = "./rest" }
domain = { path = "./domain" }
usecase = { path = "./usecase" }
gateway = { path = "./gateway" }
driver = { path = "./driver" }

[workspace]
members = [
  ".",
  "rest",
  "domain",
  "usecase",
  "gateway",
  "driver",
]