[package]
name = "driver"
version = "0.1.0"
edition = "2021"

[dependencies]
mry = "0.2.6"
anyhow = "1.0.57"
tracing = "0.1.34"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
chrono = "0.4"
diesel = { version = "1.4.8", features = ["mysql"] }

